@@ -101,6 +101,9 @@ Based on Spica SR3R
 - port some Linux 3.4 changes
 -- lib/cpumask.c: remove __any_online_cpu()
 --- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=38b93780a5381961ad92d24ab9a12a964189a3a4
+-- ARM: tlb: move noMMU tlb_flush() to asm/tlb.h
+--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=58e9c47fa0dd76693b2c85c010c7430a4de77c6d
+
 - optimizing buildflags, adapting kernel config to build with gcc 4.7.1
 -- keep compiling with 4.6.1, wireless.ko seems not working with 4.7.1
 
